--- a/src/components/BettingButton/BettingButton.css
+++ b/src/components/BettingButton/BettingButton.css
@@ -1,16 +1,22 @@
 .betting-button {
-    background-color: white;
-    color: black;
-    padding: 16px 32px;
-    font-size: 24px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    width: 270px;
-    height: 75px;
-  }
-  
-  .betting-button:hover {
-    background-color: #f1f1f1;
-  }
-  
+  background-color: white;
+  color: black;
+  padding: 16px 32px;
+  font-size: 24px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 270px;
+  height: 75px;
+  box-shadow: 0 0 15px 3px white;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.betting-button:hover {
+  transform: scale(1.1);
+  background-color: #f1f1f1;
+}
