--- a/src/components/BettingButton/BettingButton.css
+++ b/src/components/BettingButton/BettingButton.css
@@ -20,3 +20,16 @@
   transform: scale(1.1);
   background-color: #f1f1f1;
 }
+
+@media screen and (max-width: 400px) {
+  .betting-button {
+  padding: 16px 32px;
+  font-size: 12px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 135px;
+  height: 35px;
+  }
+ 
+}
