--- a/src/components/MainMatch/MainMatch.css
+++ b/src/components/MainMatch/MainMatch.css
@@ -13,10 +13,19 @@
   transform: translateY(-10px);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 400px) {
   .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
   }
-
-  .img-container2 {
+  
+  .logo-image {
+    transition: transform 250ms;
+    max-width: 5rem;
+    
   }
+ 
 }
