Adding Moblie responsibility - still problem with the bg picture

--- a/src/components/BettingButtons/BettingButtons.css
+++ b/src/components/BettingButtons/BettingButtons.css
@@ -3,23 +3,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 }
 
-.betting-buttons-margin {
-  margin-left: 24px;
-  margin-right: 24px;
-}
-
-@media screen and (max-width: 400px) {
-  
+@media screen and (max-width: 600px) {
   .betting-buttons-container {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
-  
-  .betting-buttons-margin {
-   margin-bottom: 30px;
-  }
-  
 }
