--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+@media screen and (max-width: 400px) {
+  .App {
+    margin-top: 6rem;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,17 +46,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.button-section{
-  margin-top: 8rem;
-}
-
-
-@media screen and (max-width: 400px) {
-  
-.App{
-  
-}
-  
 }
