--- a/src/components/MainMatch/MainMatch.css
+++ b/src/components/MainMatch/MainMatch.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 1rem;
 }
 
 .logo-image {
@@ -13,19 +14,11 @@
   transform: translateY(-10px);
 }
 
-@media screen and (max-width: 400px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-  }
-  
+@media screen and (max-width: 600px) {
   .logo-image {
-    transition: transform 250ms;
-    max-width: 5rem;
-    
+    width: 8rem;
   }
- 
+
+  .img-container2 {
+  }
 }
